src/test/ui/occurs-check-2.stderr
error[E0308]: mismatched types
  --> $DIR/occurs-check-2.rs:7:9
   |
LL |     f = Box::new(g);
   |         ^^^^^^^^^^^ cyclic type of infinite size
   |
help: consider unboxing the value
   |
LL |     f = *Box::new(g);
   |         +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
